# Lost_Dungeons

./: LICENSE  README.md  gradle.properties  settings.gradle
.github/workflows/: android.yml  export_codebase.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/data/biomes/: forest.json
app/src/main/assets/data/monsters/: goblin.json
app/src/main/assets/shaders/: base.frag  base.vert
app/src/main/cpp/: CMakeLists.txt  asset_manager.cpp  asset_manager.h  engine_core.cpp  engine_core.h  gl_renderer.cpp  gl_renderer.h  jni_bridge.cpp
app/src/main/java/com/dungeon/: DungeonApplication.kt
app/src/main/java/com/dungeon/database/: GameDatabase.kt  GameStateDao.kt
app/src/main/java/com/dungeon/database/entities/: GameStateEntity.kt  InventoryItemEntity.kt  PartyMemberEntity.kt
app/src/main/java/com/dungeon/engine/: DungeonWorker.kt  EngineConstants.kt  GameSurfaceView.kt  SimulationController.kt
app/src/main/java/com/dungeon/ui/: BattleActivity.kt  IntroActivity.kt  InventoryActivity.kt  InventoryAdapter.kt  MainActivity.kt  TeamActivity.kt  WidgetDialogActivity.kt
app/src/main/java/com/dungeon/ui/adapters/: PartySelectionAdapter.kt  TeamAdapter.kt
app/src/main/java/com/dungeon/widget/: DungeonWidgetProvider.kt
app/src/main/res/layout/: activity_battle.xml  activity_intro.xml  activity_inventory.xml  activity_main.xml  activity_team.xml  activity_widget_dialog.xml  item_combat_log.xml  item_inventory.xml  item_party_member.xml  item_team_member.xml  widget_dungeon_info.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: dungeon_widget_info.xml
scripts/: generate_icons.sh  setup_gradle.sh
